# COSTA

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md  rpa.sh
.github/workflows/: ci.yml
ci/: baseimage.Dockerfile  build.Dockerfile  cscs.yml
cmake/: FindCRAY_LIBSCI.cmake  FindMKL.cmake  FindSCALAPACK.cmake  Findnvpl.cmake  GitSubmodule.cmake  costa.pc.in  costaConfig.cmake.in
examples/: CMakeLists.txt  copy_bench.cpp  example0.cpp  example1.cpp  pxgemr2d_miniapp.cpp  pxtran_miniapp.cpp
miniapps/: CMakeLists.txt  block_cyclic.cpp  comm_volume.cpp  pxgemr2d_miniapp.cpp  pxtran_miniapp.cpp
spack/: repo.yaml
spack_repo/costa/: repo.yaml
src/costa/: CMakeLists.txt  bfloat16.hpp  costa_pxgemr2d.cpp  costa_pxgemr2d.hpp  costa_pxtran.cpp  costa_pxtran.hpp  layout.cpp  layout.hpp  prefixed_pxgemr2d.cpp  prefixed_pxgemr2d.h  prefixed_pxtran.cpp  pxgemr2d.cpp  pxgemr2d.h  pxgemr2d_params.hpp  pxtran.cpp  pxtran_params.hpp  scalapack.cpp  scalapack.hpp  transform.cpp  transform.hpp
src/costa/grid2grid/: block.cpp  block.hpp  comm_volume.hpp  communication_data.cpp  communication_data.hpp  grid2D.cpp  grid2D.hpp  grid_layout.hpp  interval.cpp  interval.hpp  memory_buffer.cpp  memory_buffer.hpp  memory_utils.hpp  mpi_type_wrapper.hpp  profiler.hpp  ranks_reordering.cpp  scalapack_layout.cpp  scalapack_layout.hpp  threads_workspace.hpp  transform.cpp  transform.hpp  transformer.hpp  utils.cpp  utils.hpp  workspace.hpp
src/costa/pxgemr2d/: costa_pxgemr2d.cpp  prefixed_pxgemr2d.cpp  pxgemr2d.cpp  pxgemr2d.h  pxgemr2d_params.hpp
src/costa/pxtran/: costa_pxtran.cpp  prefixed_pxtran.cpp  prefixed_pxtran.h  pxtran.cpp  pxtran.h  pxtran_params.hpp
src/costa/pxtran_op/: costa_pxtran_op.cpp  costa_pxtran_op.hpp  pxtran_op_params.hpp
src/costa/pxtranc/: prefixed_pxtranc.cpp  prefixed_pxtranc.h  pxtranc.cpp  pxtranc.h
src/costa/pxtranu/: prefixed_pxtranu.cpp  prefixed_pxtranu.h  pxtranu.cpp  pxtranu.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_bfloat16.cpp  test_utils.cpp
utils/: pxgemr2d_utils.hpp  pxtran_utils.hpp
